# imdb-sentiment-analysis

./: .env  Makefile  README.md  docker-compose.yml  example_usage.py  main.py  pyproject.toml
data/: subsample.jsonl
eda_utils/: __init__.py  helpers.py  plots.py  preprocessing_pipeline_eda.py
mlflow_experiment/: __init__.py  mlflow_experiment.py
mlflow_experiment/evaluation/: evaluation_pipeline.py  metrics.py
mlflow_experiment/inference/: inference_output.py  inference_output_df.py  inference_pipeline.py
mlflow_experiment/inference/model/: basic_llama_cpp_model.py  llama_cpp_model.py  llama_cpp_model_output.py
mlflow_experiment/inference/postprocessing/: basic_postprocessing.py  binary_classification_output.py  end_of_cot_postprocessing.py  json_postprocessing.py  postprocessing.py
mlflow_experiment/inference/prompt_building/: __init__.py  basic_user_prompt_builder.py  user_prompt_builder.py
mlruns/173405608153165389/: meta.yaml
mlruns/173405608153165389/0455dc06c5484adda61c8df1c3c790a9/: meta.yaml
mlruns/173405608153165389/05bb042170ef4bdabc05e158dfdc8507/: meta.yaml
mlruns/173405608153165389/07845a819cbf4985961555677ddcc963/: meta.yaml
mlruns/173405608153165389/08fb19bf484846618250bfc689a9c6e6/: meta.yaml
mlruns/173405608153165389/099e94aba99c44e6b58cf71949da8033/: meta.yaml
mlruns/173405608153165389/0baecd152c4542ae8c474c3f113c0362/: meta.yaml
notebooks/: basic_usage.ipynb  cot_prompting.ipynb  exploratory_data_analysis.ipynb  full-test.ipynb  keep_parts_only.ipynb  results.ipynb  zero-shot-few-shot-prompting.ipynb
(+1541 files in other folders)
